add: swagger documentation
